--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,76 @@
-#root {
+/* App Layout */
+body {
+  margin: 0;
+}
+.app-container {
+  display: flex;
+  padding: 0;
+  margin: 0;
+}
+
+.main-content {
+  flex-grow: 1;
+  background-color: #f9f9f9;
+}
+.page {
+    padding: 20px;
+}
+
+/* Sidebar */
+.sidebar {
+  width: 250px;
+  background: #FF4411;
+  padding: 20px;
+  height: 100vh;
+}
+
+.sidebar ul {
+  list-style: none;
+  padding: 0;
+}
+
+.sidebar ul li {
+  margin: 10px 0;
+}
+
+.sidebar ul li a {
+  text-decoration: none;
+  color: black;
+  display: block;
+  padding: 10px;
+}
+
+.sidebar ul li a:hover {
+  background: #bbb;
+}
+
+/* Topbar */
+.topbar {
+  /* display: flex; */
+  /* justify-content: space-between; */
+  /* align-items: center; */
+  background: #ccc;
+  padding: 10px 20px;
+}
+
+.topbar-icons {
+  font-size: 1.5em;
+}
+
+/* Dashboard */
+.dashboard-content {
+  display: flex;
+  gap: 20px;
+}
+
+.dashboard-content div {
+  background: grey;
+  padding: 20px;
+  border-radius: 8px;
+  flex: 1;
+}
+
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -39,4 +111,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
