--- a/src/App.css
+++ b/src/App.css
@@ -39,14 +39,17 @@ button:hover {
   color: var(--secondary-color);
 }
 
-select, input{
+select,
+input {
   padding: .5rem;
   font-size: 1rem;
   color: var(--primary-color);
   border: 2px solid rgb(183, 182, 182);
   border-radius: 5px;
 }
-select, input:focus {
+
+select,
+input:focus {
   border: 2px solid var(--primary-color);
   border-radius: 5px;
   outline: none;
@@ -143,7 +146,7 @@ select, input:focus {
   font-family: "Lato", sans-serif;
   font-style: normal;
   border-style: none;
-  border-bottom: 1px solid var(--primary-color);
+  border-bottom: 2px solid var(--primary-color);
 }
 
 .waitlist-table tr:hover {
@@ -219,7 +222,7 @@ form label {
   width: 200px;
   padding: 10px;
   border-radius: 5px;
-  border: 3px solid var(--primary-color);
+  border: 2px solid var(--primary-color);
 }
 
 .table-card.assigned {
@@ -265,11 +268,13 @@ form label {
   font-size: 20px;
   cursor: pointer;
 }
+
 .menu {
   border: 2px solid var(--primary-color);
   border-radius: 15px;
   padding: 1rem
 }
+
 .menu-items {
   margin-bottom: 15px;
 }
@@ -301,6 +306,24 @@ form label {
   font-weight: 400;
   font-style: normal;
   font-size: 1rem;
+}
+
+/* Menu page */
+.menu__container {
+  display: flex;
+  gap: 2rem;
+  padding: 2rem;
+}
+
+.menu__wrap {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  border: 2px solid var(--primary-color);
+  padding: 2rem;
+  width: 200px;
+  height: 500px;
+  border-radius: 15px;
 }
 
 /* #root {
