--- a/src/App.css
+++ b/src/App.css
@@ -32,11 +32,22 @@ button {
   border-radius: 5px;
   color: var(--primary-color);
   background-color: var(--secondary-color);
+  cursor: pointer;
 }
 
 button:hover {
   background-color: var(--primary-color);
   color: var(--secondary-color);
+}
+
+button.active {
+  color: var(--secondary-color);
+  background-color: var(--primary-color);
+}
+
+button:disabled {
+  color: var(--primary-color);
+  background-color: var(--secondary-color);
 }
 
 select,
@@ -164,7 +175,6 @@ input:focus {
 
 .custom-button {
   border: 2px solid var(--primary-color);
-  cursor: pointer;
   border-radius: 5px;
   margin-top: 20px;
 }
@@ -202,7 +212,7 @@ input:focus {
   position: absolute;
   top: 10px;
   right: 10px;
-  font-size: 20px;
+  font-size: 5rem;
   cursor: pointer;
 }
 
@@ -265,14 +275,6 @@ form label {
   padding: 1.5rem 3rem;
 }
 
-.close-button {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  font-size: 20px;
-  cursor: pointer;
-}
-
 .menu {
   border: 2px solid var(--primary-color);
   border-radius: 15px;
@@ -333,46 +335,3 @@ form label {
   height: 500px;
   border-radius: 15px;
 }
-
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-} */
